--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: reporttools
 Type: Package
 Title: Generate LaTeX tables of descriptive statistics
-Version: 1.0.6
-Date: 2011-04-18
+Version: 1.0.7
+Date: 2011-11-30
 Author: Kaspar Rufibach
-Maintainer: Kaspar Rufibach <kaspar.rufibach@ifspm.uzh.ch>
+Maintainer: Kaspar Rufibach <kaspar.rufibach@gmail.com>
 Depends: xtable
-Description: The functions in this package are especially helpful when
-        writing reports of data analysis using Sweave.
+Description: The functions in this package are especially helpful when writing reports of data analysis using Sweave.
 License: GPL (>= 2)
-URL: http://www.biostat.uzh.ch/aboutus/people/rufibach.html
-Packaged: 2011-04-18 13:10:58 UTC; rufibach
+URL: http://www.kasparrufibach.ch
+Packaged: 2011-11-30 17:50:42 UTC; rufibach
 Repository: CRAN
-Date/Publication: 2011-04-24 06:58:13
+Date/Publication: 2011-12-01 08:00:22
