--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: reporttools
 Type: Package
 Title: Generate LaTeX tables of descriptive statistics
-Version: 1.0.7
-Date: 2011-11-30
+Version: 1.0.8
+Date: 2012-03-23
 Author: Kaspar Rufibach
 Maintainer: Kaspar Rufibach <kaspar.rufibach@gmail.com>
-Depends: xtable
-Description: The functions in this package are especially helpful when writing reports of data analysis using Sweave.
+Depends: xtable, survival
+Description: The functions in this package are especially helpful when
+        writing reports of data analysis using Sweave.
 License: GPL (>= 2)
 URL: http://www.kasparrufibach.ch
-Packaged: 2011-11-30 17:50:42 UTC; rufibach
+Packaged: 2012-03-23 11:46:19 UTC; rufibach
 Repository: CRAN
-Date/Publication: 2011-12-01 08:00:22
+Date/Publication: 2012-03-23 13:03:58
