--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: reporttools
 Type: Package
 Title: Generate LaTeX tables of descriptive statistics
-Version: 1.0.8
-Date: 2012-03-23
+Version: 1.0.9
+Date: 2013-06-24
 Author: Kaspar Rufibach
 Maintainer: Kaspar Rufibach <kaspar.rufibach@gmail.com>
 Depends: xtable, survival
@@ -10,6 +10,7 @@ Description: The functions in this package are especially helpful when
         writing reports of data analysis using Sweave.
 License: GPL (>= 2)
 URL: http://www.kasparrufibach.ch
-Packaged: 2012-03-23 11:46:19 UTC; rufibach
+Packaged: 2013-06-24 05:46:16 UTC; rufibach
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-03-23 13:03:58
+Date/Publication: 2013-06-24 08:18:01
